# Cantaia

./: .env.local.example  .gitignore  AMELIORATIONS.md  CANTAIA_AUDIT_OPTIMISATIONS.md  CANTAIA_PIPELINE_INGESTION_DONNEES.md  CANTAIA_PLAN_EXECUTION_COMPLET.md  CANTAIA_Prompt_Estimation_Prix_Plans.md  CANTAIA_TEST_ULTIME.md  CHECKLIST_FONCTIONNELLE.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTION_Audit_Optimisations.md  CLAUDE_CODE_INSTRUCTION_Calibration_Apprentissage.md  CLAUDE_CODE_INSTRUCTION_Pipeline_Estimation_Multi_Modele.md  CLAUDE_CODE_INSTRUCTION_Refonte_Design_Complete.md  CLAUDE_CODE_INSTRUCTION_Refonte_Landing.md  CONSTRUCTION_SAAS_PROMPT.txt  PROGRESS.md  PROMPT_CACHING_REPORT.md  PROMPT_REDESIGN_FRONTEND.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  desktop-release.yml
.superpowers/design-preview/: chat-v3.html  dashboard-options.html  dashboard-premium.html  dashboard-v2.html  dashboard-v3.html  graphite-light-dark-sidebar.html  graphite-vs-light.html  mail-options.html  mail-v3.html  palette-alternatives.html  palette-preview.html  planning-v3.html  portal-v3.html  price-request-v2.html  projects-v3.html  (+6 more)
Fichier/: 25.04.15 - Soumission - Menétrey SA.xlsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: CANTAIA_OFFRE_COMMERCIALE.md  PRICING-STRATEGY.md  STRIPE-IMPLEMENTATION-ROADMAP.md  architecture-data-intelligence.md
scripts/: classify-emails.ts  test-price-resolver.ts
(+746 files in other folders)
